data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1586.wast
;; 7. **Test Description**:     - Formulate a structure where `br_if` targets a label within itself but crosses the loop boundary improperly.    - **Constraint Checking**: Tests the label target validation and proper consideration of loop entries while exiting.    - **Infinite Loop Relation**: Ensures that improper label crossing doesn't cause the loop to continue indefinitely, confirming valid target resolution in `wizard_engine`.

(assert_invalid
  (module
    (func $invalid-br_if-loop-target
      (loop $outer_loop
        (block $inner_block
          (br_if 0 (i32.const 1)) 
        )
      )
    )
  )
  "invalid branch target"
)